add advanced vary

--- a/Specified_Vary/1/makefile
+++ b/Specified_Vary/1/makefile
@@ -1,15 +1,4 @@
-.PHONY : all first second third
-
 all :
-	@$(MAKE) first
-	@$(MAKE) second
-	@$(MAKE) third
-	
-first :
-	@echo "first"
-	
-second :
-	@echo "second"
-
-third :
-	@echo "third"
+	@echo "$(MAKE)"
+	@echo "$(MAKECMDGOALS)"
+	@echo "$(MAKEFILE_LIST)"
