modify some bug

--- a/Main/Makefile
+++ b/Main/Makefile
@@ -1,7 +1,7 @@
 
 DIR_CURRENT := $(realpath .)
 
-DIR_INC := $(ROOT)/Common/inc
+DIR_INC := $(ROOT)/Common/inc $(ROOT)/Lib/inc
 DIR_SRC := $(DIR_CURRENT)/src
 
 SOURCE_FILES := main.c
